fix: tooltip nowrap

--- a/src/components/UI/Tooltip.module.css
+++ b/src/components/UI/Tooltip.module.css
@@ -15,7 +15,7 @@
   border-radius: 5px;
   opacity: 0.8;
   height: auto;
-  min-width: 8rem;
+  min-width: 5rem;
   max-width: 20rem; 
   font-size:  0.8rem;
   pointer-events: none;
@@ -29,6 +29,10 @@
 .tooltip .title {
   margin: 0;
   font-weight: 600;
+  white-space: nowrap;
+}
+
+.tooltip .text {
   white-space: nowrap;
 }
 
